k8s/scaleway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  labels:
    app.kubernetes.io/part-of: opencargo
